# BoT-SORT

./: CMakeLists.txt  README.md  package.xml
tracker/: bot_sort.py  gmc.py  matching.py
