<?xml version="1.0"?>
<package format="2">
  <name>BoT-SORT</name>
  <version>0.1.0</version>
  <description>The BoT-SORT package</description>

  <maintainer email="cds-jetson-host@todo.todo">cds-jetson-host</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
